[gd_scene load_steps=4 format=3 uid="uid://kpyhsecu4bqe"]

[ext_resource type="Script" path="res://examples/ui/main_menu/MainMenu.gd" id="1_kkvk4"]

[sub_resource type="LabelSettings" id="LabelSettings_tjow1"]
line_spacing = 64.0
font_size = 48

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3fx51"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_kkvk4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.0
offset_right = 183.0
offset_bottom = 83.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
label_settings = SubResource("LabelSettings_tjow1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_3fx51")

[node name="ExampleButtons" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Example1" type="Button" parent="CanvasLayer/Control/VBoxContainer/ExampleButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Basic plugin usage"

[node name="Example2" type="Button" parent="CanvasLayer/Control/VBoxContainer/ExampleButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Interacting via Area3D"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_3fx51")

[node name="Exit" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/ExampleButtons/Example1" to="." method="_on_example_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/ExampleButtons/Example2" to="." method="_on_example_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
